# agentscad

./: .dockerignore  .env.example  .gitignore  AGENT_REDESIGN.md  CHANGELOG.md  CLAUDE.md  DESIGN.md  Dockerfile  LICENSE  README.md  README_CN.md  README_zh.md  THIRD_PARTY_NOTICES.md  benchmark-results.txt  docker-compose.yml  keep-dev-alive.sh  next.config.ts  package.json  replace_models.py  start-dev.sh  start.sh  worklog-session10.md  worklog-session11.md  worklog.md
.zscripts/: build.sh  dev.sh  (+1 more)
cad_agent/: __init__.py  cli.py  config.py  main.py  pyproject.toml
cad_agent/app/: __init__.py
cad_agent/app/agents/: __init__.py  debug_agent.py  design_agent.py  executor_agent.py  generator_agent.py  intake_agent.py  intent_agent.py  orchestrator.py  parameter_schema_agent.py  report_agent.py  research_agent.py  template_agent.py  validator_agent.py
cad_agent/app/llm/: __init__.py  design_critic.py  geometry_dsl.py  geometry_intent.py  object_model.py  pipeline_models.py  pipeline_utils.py  provider.py  scad_generator.py  scad_parameter_schema.py  spec_parser.py
cad_agent/app/models/: __init__.py  agent_result.py  case.py  design_job.py  validation.py
cad_agent/tests/: conftest.py  test_design_job.py  test_engineering_rules.py  test_generation_strategy.py  test_intake_agent.py  test_llm_provider.py  test_object_model.py  test_openscad_executor.py  test_orchestrator.py  test_parametric_builders.py  test_redesign_agents.py  test_retry_policy_storage.py  test_scad_parameter_schema.py  test_sqlite_repo.py  test_validator_semantics.py  test_web_research_adapter.py
(+244 files in other folders)
