[project]
name = "cad-agent"
version = "0.1.0"
description = "Business-Closed-Loop CAD Agent System for OpenSCAD"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "crewai>=0.80.0",
    "jinja2>=3.1.4",
    "sqlite-utils>=3.38",
    "httpx>=0.28.0",
    "python-multipart>=0.0.20",
    "click>=8.1.7",
    "structlog>=24.4.0",
    "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
    "mypy>=1.14.0",
    "pre-commit>=4.0.0",
]

[project.scripts]
cad-agent = "cad_agent.cli:main"

[project.urls]
Homepage = "https://github.com/example/cad-agent"
Documentation = "https://github.com/example/cad-agent#readme"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cad_agent"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.mypy]
python_version = "3.11"
strict = true
